v1/k8s/api-deployment.yaml
###########################
# Deployment
###########################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: django
  template:
    metadata:
      labels:
        component: django
    spec:
      containers:
        - name: django-container
          image: localhost:32000/api:latest
          ports:
            - containerPort: 8000
          command: ["sh", "-c", "pipenv run python manage.py runserver 0.0.0.0:8000"]
---
###########################
# Cluster IP Service
###########################
apiVersion: v1
kind: Service
metadata:
  name: django-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: django
  ports:
    - port: 8000
      targetPort: 8000
