v1/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
    - http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service: 
                name: django-cluster-ip-service
                port:
                  number: 8000
          - path: /admin/login
            pathType: Prefix
            backend:
              service: 
                name: django-cluster-ip-service
                port:
                  number: 8000
          - path: /api
            pathType: Prefix
            backend:
              service: 
                name: django-cluster-ip-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: react-cluster-ip-service
                port: 
                  number: 3000
          - path: /static/admin/
            pathType: Prefix
            backend:
              service: 
                name: django-cluster-ip-service
                port:
                  number: 8000
          - path: /static/rest_framework/
            pathType: Prefix
            backend:
              service: 
                name: django-cluster-ip-service
                port:
                  number: 8000
          - path: /static/
            pathType: Prefix
            backend:
              service: 
                name: react-cluster-ip-service
                port: 
                  number: 3000
          - path: /media/
            pathType: Prefix
            backend:
              service: 
                name: react-cluster-ip-service
                port: 
                  number: 3000
